introduced mini-blog
blog but i don't have to write a ton basically

--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
 <p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a></p>
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
+<p>Mini-Blog<br>
+
+<b>October 5th 2021</b><br>
+<br>
+Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
+Oh, also sorry for not updating this website in a while.
 </body>
