--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <title>megamanyoutuber's Website</title>
 </head>
 
-<body>
-<p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a></p>
+<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
+<center>
+<table border="2" cellpadding="2" cellspacing="2" width="100">
+<tr>
+<th><p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a></p></th>
+</tr>
+</table>
+<table border="2" cellpadding="2" cellspacing="2" width="600">
+<tr><th>
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
+</tr></th>
+<tr><th>
 <p>Mini-Blog<br>
-
-<b>October 5th 2021</b><br>
 <br>
+<b>October 18th 2021</b><br>
+Decided to update the design of this website to be something much more interesting, instead of plain old white background and black text.<br>
+<br>
+<b>October 5th 2021</b><br>
 Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
 Oh, also sorry for not updating this website in a while.
+</tr></th>
+</table>
+</center>
 </body>
