--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,8 +2,16 @@
 <title>megamanyoutuber's News</title>
 </head>
 
-<body>
-<a href="../index.html">Go back</a>
+<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
+<center>
+<table border="2" cellpadding="2" cellspacing="2" width="80">
+<tr><th><a href="../index.html">Go back</a></tr></th>
+</table>
+<table border="2" cellpadding="2" cellspacing="2" width="600">
+<tr><th>
 <p>Currently on the blog:<br>
 Sorry. Uhhhhh yeah, I maybe opened this webpage too soon. Anyways you will see blog later on trust me</p>
+</tr></th>
+</table>
+</center>
 </body>
