--- a/pages/guides.html
+++ b/pages/guides.html
@@ -2,8 +2,15 @@
 <title>megamanyoutuber's Guides</title>
 </head>
 
-<body>
-<a href="../index.html">Go back</a>
-<p>Currently for guides:</p>
+<body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
+<center>
+<table border="2" cellpadding="2" cellspacing="2" width="80">
+<tr><th><a href="../index.html">Go back</a></tr></th>
+</table>
+<table border="2" cellpadding="2" cellspacing="2" width="600">
+<tr><th><p>Currently for guides:</p>
 <p><a href="../guides/srvwks.html">Converting Windows Server for workstation use</a><br>
+</tr></th>
+</table>
+</center>
 </body>
