--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ What will be here? Well, I might put news and guides related to what I'm doing, 
 <tr><th>
 <p>Mini-Blog<br>
 <br>
+<b>November 12th 2021</b><br>
+Welp. from a <a href="https://www.ctrl.blog/entry/microsoft-edge-protocol-competition.html">page</a> that was shared by someone in one of Discord servers I use, looks like Microsoft is into forcing their web browser yet again. Good question is, Why??? I don't want Microsoft Edge at all, why can't Microsoft just let me use Firefox? Thanks god I'm on Windows 7 instead of Windows 11 Nickel. After seeing this being done by Microsoft, looks like I'll never ever install Windows 11 Nickel.<br>
+<br>
 <b>October 18th 2021</b><br>
 Decided to update the design of this website to be something much more interesting, instead of plain old white background and black text.<br>
 <br>
