--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ Decided to update the design of this website to be something much more interesti
 Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
 Oh, also sorry for not updating this website in a while.
 </tr></th>
+<tr><th>
+<a href="https://www.mozilla.org/firefox/new/"><img src="http://toastytech.com/good/ffbutton88x31-firefox.jpg"></img></a>
+</tr></th>
 </table>
 </center>
 </body>
