--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
 <center>
-<table border="2" cellpadding="2" cellspacing="2" width="100">
+<table border="2" cellpadding="2" cellspacing="2" width="160">
 <tr>
-<th><p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a></p></th>
+<th><p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a><a href="https://discord.gg/xDdWNpGeq8">Discord </a></p></th>
 </tr>
 </table>
 <table border="2" cellpadding="2" cellspacing="2" width="600">
