--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 <table border="2" cellpadding="2" cellspacing="2" width="160">
 <tr>
-<th><p><a href="pages/blog.html">Blog </a><a href="pages/guides.html">Guides </a><a href="https://discord.gg/xDdWNpGeq8">Discord </a></p></th>
+<th><p><a href="pages/posts.html">Posts </a><a href="pages/guides.html">Guides </a><a href="https://discord.gg/xDdWNpGeq8">Discord </a></p></th>
 </tr>
 </table>
 <table border="2" cellpadding="2" cellspacing="2" width="600">
