--- a/pages/posts.html
+++ b/pages/posts.html
@@ -9,7 +9,7 @@
 </table>
 <table border="2" cellpadding="2" cellspacing="2" width="600">
 <tr><th>
-<p>Currently on the blog:<br>
+<p>Currently on the posts:<br>
 Sorry. Uhhhhh yeah, I maybe opened this webpage too soon. Anyways you will see blog later on trust me</p>
 </tr></th>
 </table>
