--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ What will be here? Well, I might put news and guides related to what I'm doing, 
 <tr><th>
 <p>Mini-Blog<br>
 <br>
+<b>January 5th 2022</b><br>
+Wow. Turns out that Mozilla is also into Crypto, people went to your browser because it was the last sane browser, but Mozilla decided to treat us like that. Firefox was my first web browser, I had a lot of good memories with it. Welp it's time to switch to another web browser.
+Vivaldi, SeaMonkey maybe?<br>
+<br>
 <b>November 12th 2021</b><br>
 Welp. from a <a href="https://www.ctrl.blog/entry/microsoft-edge-protocol-competition.html">page</a> that was shared by someone in one of Discord servers I use, looks like Microsoft is into forcing their web browser yet again. Good question is, Why??? I don't want Microsoft Edge at all, why can't Microsoft just let me use Firefox? Thanks god I'm on Windows 7 instead of Windows 11 Nickel. After seeing this being done by Microsoft, looks like I'll never ever install Windows 11 Nickel.<br>
 <br>
@@ -26,9 +30,6 @@ Decided to update the design of this website to be something much more interesti
 <b>October 5th 2021</b><br>
 Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
 Oh, also sorry for not updating this website in a while.
-</tr></th>
-<tr><th>
-<a href="https://www.mozilla.org/firefox/new/"><img src="http://toastytech.com/good/ffbutton88x31-firefox.jpg"></img></a>
 </tr></th>
 </table>
 </center>
