--- a/pages/posts.html
+++ b/pages/posts.html
@@ -1,5 +1,5 @@
 <head>
-<title>megamanyoutuber's News</title>
+<title>RayZen's News</title>
 </head>
 
 <body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
@@ -9,8 +9,27 @@
 </table>
 <table border="2" cellpadding="2" cellspacing="2" width="600">
 <tr><th>
-<p>Currently on the posts:<br>
-Sorry. Uhhhhh yeah, I maybe opened this webpage too soon. Anyways you will see blog later on trust me</p>
+My Software:<br>
+<p>Any posts here are related to my software, games and anything similar.<br>
+<a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a>
+<p>
+<tr><th>
+Software:<br>
+<p>Any posts here are related to software, games and anything similar.<br>
+N/A
+<p>
+</tr></th>
+<tr><th>
+Personal:<br>
+<p>Any posts here are related to my own personal life.<br>
+N/A
+<p>
+</tr></th>
+<tr><th>
+Resources:<br>
+<p>Any posts here are related to getting resources, links, etc.<br>
+N/A
+<p>
 </tr></th>
 </table>
 </center>
