--- a/index.html
+++ b/index.html
@@ -3,34 +3,49 @@
 </head>
 
 <body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
-<center>
-<table border="2" cellpadding="2" cellspacing="2" width="160">
+
+<!-- Changing the font -->
+
+<!--<font face="Arial, sans-serif" size="+2">-->
+
+<!---->
+
+<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
 <tr>
-<th><p><a href="pages/posts.html">Posts </a><a href="pages/guides.html">Guides </a><a href="https://discord.gg/xDdWNpGeq8">Discord </a></p></th>
-</tr>
-</table>
-<table border="2" cellpadding="2" cellspacing="2" width="600">
-<tr><th>
+<!-- Left header -->
+<td class="left-header" bgcolor="#965000" width="150" valign="top">
+<p>Pages</p>
+<a href="pages/posts.html">Posts</a><br>
+<a href="pages/guides.html">Guides</a><br>
+<p>Links:</p>
+<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+</td>
+<!-- End of left header -->
+
+<!-- Content -->
+<td class="content">
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
-</tr></th>
-<tr><th>
-<p>Mini-Blog<br>
-<br>
-<b>January 5th 2022</b><br>
+<p>Mini-Posts</p>
+<p><b>February 15th 2022</b><br>
+I decided to give this website another redesign. Hopefully the pages will be better to read now. In addition this website
+will look better on lower resolution screens now.
+<p><b>January 5th 2022</b><br>
 Wow. Turns out that Mozilla is also into Crypto, people went to your browser because it was the last sane browser, but Mozilla decided to treat us like that. Firefox was my first web browser, I had a lot of good memories with it. Welp it's time to switch to another web browser.
-Vivaldi, SeaMonkey maybe?<br>
-<br>
-<b>November 12th 2021</b><br>
-Welp. from a <a href="https://www.ctrl.blog/entry/microsoft-edge-protocol-competition.html">page</a> that was shared by someone in one of Discord servers I use, looks like Microsoft is into forcing their web browser yet again. Good question is, Why??? I don't want Microsoft Edge at all, why can't Microsoft just let me use Firefox? Thanks god I'm on Windows 7 instead of Windows 11 Nickel. After seeing this being done by Microsoft, looks like I'll never ever install Windows 11 Nickel.<br>
-<br>
-<b>October 18th 2021</b><br>
-Decided to update the design of this website to be something much more interesting, instead of plain old white background and black text.<br>
-<br>
-<b>October 5th 2021</b><br>
+Vivaldi, SeaMonkey maybe?
+</p>
+<p><b>November 12th 2021</b><br>
+Welp. from a <a href="https://www.ctrl.blog/entry/microsoft-edge-protocol-competition.html">page</a> that was shared by someone in one of Discord servers I use, looks like Microsoft is into forcing their web browser yet again. Good question is, Why??? I don't want Microsoft Edge at all, why can't Microsoft just let me use Firefox? Thanks god I'm on Windows 7 instead of Windows 11 Nickel. After seeing this being done by Microsoft, looks like I'll never ever install Windows 11 Nickel.
+</p>
+<p><b>October 18th 2021</b><br>
+Decided to update the design of this website to be something much more interesting, instead of plain old white background and black text.
+</p>
+<p><b>October 5th 2021</b><br>
 Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
 Oh, also sorry for not updating this website in a while.
-</tr></th>
+</p>
+</td>
+<!-- End of content -->
+</tr>
 </table>
-</center>
 </body>
