--- a/pages/guides.html
+++ b/pages/guides.html
@@ -4,13 +4,26 @@
 
 <body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
 <center>
-<table border="2" cellpadding="2" cellspacing="2" width="80">
-<tr><th><a href="../index.html">Go back</a></tr></th>
-</table>
-<table border="2" cellpadding="2" cellspacing="2" width="600">
-<tr><th><p>Currently for guides:</p>
+<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
+<tr>
+<!-- Left header -->
+<td class="left-header" bgcolor="#965000" width="150" valign="top">
+<p>Pages</p>
+<a href=../index.html>Homepage</a><br>
+<a href="../pages/posts.html">Posts</a><br>
+<a href="../pages/guides.html">Guides</a><br>
+<p>Links:</p>
+<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+</td>
+<!-- End of left header -->
+
+<!-- Content -->
+<td class="content" valign="top">
+<p>Guides:</p>
 <p><a href="../guides/srvwks.html">Converting Windows Server for workstation use</a><br>
-</tr></th>
+</td>
+<!-- End of Content -->
+</tr>
 </table>
 </center>
 </body>
