--- a/pages/posts.html
+++ b/pages/posts.html
@@ -4,33 +4,40 @@
 
 <body bgcolor="#1f1f1f" text="#ffffff" link="#e8803c" vlink="#e8803c">
 <center>
-<table border="2" cellpadding="2" cellspacing="2" width="80">
-<tr><th><a href="../index.html">Go back</a></tr></th>
-</table>
-<table border="2" cellpadding="2" cellspacing="2" width="600">
-<tr><th>
+<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
+<tr>
+<!-- Left header -->
+<td class="left-header" bgcolor="#965000" width="150" valign="top">
+<p>Pages</p>
+<a href=../index.html>Homepage</a><br>
+<a href="../pages/posts.html">Posts</a><br>
+<a href="../pages/guides.html">Guides</a><br>
+<p>Links:</p>
+<a href="https://discord.gg/xDdWNpGeq8">Discord</a><br>
+</td>
+<!-- End of left header -->
+
+<!-- Content -->
+<td class="content" valign="top">
 My Software:<br>
 <p>Any posts here are related to my software, games and anything similar.<br>
 <a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a>
 <p>
-<tr><th>
 Software:<br>
 <p>Any posts here are related to software, games and anything similar.<br>
 N/A
 <p>
-</tr></th>
-<tr><th>
 Personal:<br>
 <p>Any posts here are related to my own personal life.<br>
 N/A
 <p>
-</tr></th>
-<tr><th>
 Resources:<br>
 <p>Any posts here are related to getting resources, links, etc.<br>
 N/A
 <p>
-</tr></th>
+</td>
+<!-- End of content -->
+</tr>
 </table>
 </center>
 </body>
