--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
 <p>Mini-Posts</p>
+<p><b>February 24th 2022</b><br>
+Current Russia-Ukraine stuff are getting scary, I'm worried on what will happen to me since I'm ukrainian. Today Russia
+invaded a few cities. Thankfully Russia didn't invade the city where I live. Now my school wlll be online, so I'll
+have more time towards this website and other stuff of mine, such as my YouTube channel which is beginning to become more
+popular now.
+</p>
 <p><b>February 15th 2022</b><br>
 I decided to give this website another redesign. Hopefully the pages will be better to read now. In addition this website
 will look better on lower resolution screens now.
+</p>
 <p><b>January 5th 2022</b><br>
 Wow. Turns out that Mozilla is also into Crypto, people went to your browser because it was the last sane browser, but Mozilla decided to treat us like that. Firefox was my first web browser, I had a lot of good memories with it. Welp it's time to switch to another web browser.
 Vivaldi, SeaMonkey maybe?
