--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
 <p>Mini-Posts</p>
+<p><b>March 4th 2022</b><br>
+In case you are worried about me, yes, I am STILL ALIVE.
+</p>
 <p><b>February 24th 2022</b><br>
 Current Russia-Ukraine stuff are getting scary, I'm worried on what will happen to me since I'm ukrainian. Today Russia
 invaded a few cities. Thankfully Russia didn't invade the city where I live. Now my school wlll be online, so I'll
