--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
 <p>Mini-Posts</p>
+<p><b>June 4th 2022</b><br>
+Haven't updated this website in a while, haven't I? Sorry, but I didn't really have an opportunity to update this with anything. It's not like
+I can do much, I don't really have any ideas for now, so this website will stay like it is for now.
+</p>
 <p><b>March 4th 2022</b><br>
 In case you are worried about me, yes, I am STILL ALIVE.
 </p>
