--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--<font face="Arial, sans-serif" size="+2">-->
 
 <!---->
-
+<center>
 <table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
 <tr>
 <!-- Left header -->
@@ -22,11 +22,12 @@
 </td>
 <!-- End of left header -->
 
-<!-- Content -->
 <td class="content">
 <p>Welcome to my personal webpage!<br>
 What will be here? Well, I might put news and guides related to what I'm doing, and of course enjoying!</p>
-<p>Mini-Posts</p>
+<p>Mini-Posts<br>
+None</p>
+<!-- Me arguing stuff for no reason, not worth reading lol
 <p><b>June 4th 2022</b><br>
 Haven't updated this website in a while, haven't I? Sorry, but I didn't really have an opportunity to update this with anything. It's not like
 I can do much, I don't really have any ideas for now, so this website will stay like it is for now.
@@ -57,9 +58,10 @@ Decided to update the design of this website to be something much more interesti
 <p><b>October 5th 2021</b><br>
 Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorback95.com">Razorback</a>? Honestly I never understood the point of why people would support such a disaster called Windows 11, there are plenty of issues with it. UI based on electron, unstable, <b>retarded</b> system requirements. No. Don't even try to convince me those requirements are good, Microsoft has to understand that they will never make Windows <b>EVER</b> secure.<br>
 Oh, also sorry for not updating this website in a while.
-</p>
+</p> -->
 </td>
 <!-- End of content -->
 </tr>
 </table>
+</center>
 </body>
