--- a/pages/posts.html
+++ b/pages/posts.html
@@ -21,20 +21,23 @@
 <td class="content" valign="top">
 My Software:<br>
 <p>Any posts here are related to my software, games and anything similar.<br>
-<a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a>
-<p>
+N/A
+</p>
 Software:<br>
 <p>Any posts here are related to software, games and anything similar.<br>
-N/A
-<p>
+<a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a><br>
+<a href="../posts/chromexp.html">Chromium 108 on Windows XP [22.12.2022]</a>
+</p>
 Personal:<br>
 <p>Any posts here are related to my own personal life.<br>
-N/A
+<a href="../posts/return.html">It has been a while... [22.12.2022]</a>
+</p>
 <p>
 Resources:<br>
+</p>
 <p>Any posts here are related to getting resources, links, etc.<br>
 N/A
-<p>
+</p>
 </td>
 <!-- End of content -->
 </tr>
