--- a/pages/posts.html
+++ b/pages/posts.html
@@ -26,7 +26,8 @@ N/A
 Software:<br>
 <p>Any posts here are related to software, games and anything similar.<br>
 <a href="../posts/xp2003.html">Windows XP/Server 2003 Tips, Tweaks, and etc.</a><br>
-<a href="../posts/chromexp.html">Chromium 108 on Windows XP [22.12.2022]</a>
+<a href="../posts/chromexp.html">Chromium 108 on Windows XP [22.12.2022]</a><br>
+<a href="../posts/win81.html">Why Windows 8.1 is the best [26.12.2022]</a>
 </p>
 Personal:<br>
 <p>Any posts here are related to my own personal life.<br>
