--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@ Windows 11 released? You mean it's 1 year anniversary of <a href="http://razorba
 Oh, also sorry for not updating this website in a while.
 </p> -->
 </td>
-<!-- End of content -->
 </tr>
+<!-- End of content -->
+<tr>
+<td colspan="2">
+<center>
+<a href="http://reimu.info"><img src="images/png/ezio.png"></img></a>
+</tr>
+</td>
+</table>
+<table border="2" cellpadding="2" cellspacing="2" style="font-size:14px;">
 </table>
 </center>
 </body>
