not the redesign lol

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ Oh, also sorry for not updating this website in a while.
 <td colspan="2">
 <center>
 <a href="http://reimu.info"><img src="images/png/ezio.png"></img></a>
+<a href=http://leolaus.neocities.org><img src=https://leolaus.neocities.org/leosite.gif></a>
 </tr>
 </td>
 </table>
